# serializer version: 1
# name: test_application_update
  Response(
    data=dict({
    }),
    id='test',
    message='Message sent',
    module=None,
    subtype=None,
    type='N/A',
  )
# ---
# name: test_bad_token
  Response(
    data=dict({
    }),
    id='test',
    message='Message sent',
    module=None,
    subtype=None,
    type='N/A',
  )
# ---
# name: test_execute_command
  ExecuteResult(
    commandID='test-command',
    error=None,
    exitCode=0,
    stderr='',
    stdout='Command output',
  )
# ---
# name: test_execute_command_timeout
  ExecuteResult(
    commandID='test-command',
    error=None,
    exitCode=0,
    stderr='',
    stdout='Command output',
  )
# ---
# name: test_exit_backend
  Response(
    data=dict({
    }),
    id='test',
    message='Message sent',
    module=None,
    subtype=None,
    type='N/A',
  )
# ---
# name: test_get_commands
  SettingsCommands(
    allowlist=list([
      SettingsCommandDefinition(
        arguments=list([
        ]),
        command='/usr/bin/test',
        id='test-command-id',
        name='Test Command',
        workingDir='',
      ),
    ]),
  )
# ---
# name: test_get_data
  ModulesData(
    battery=None,
    cpu=None,
    disks=None,
    displays=None,
    gpus=None,
    media=None,
    memory=None,
    networks=None,
    processes=None,
    sensors=None,
    system=System(
      boot_time=1234,
      camera_usage=list([
        'camera1',
        'camera2',
      ]),
      device_info=DeviceInfo(
        bios_vendor='bios_vendor',
        bios_version='bios_version',
        board_name='board_name',
        board_vendor='board_vendor',
        chassis_type='chassis_type',
        manufacturer='manufacturer',
        model='model',
        version='version',
      ),
      fqdn='hostname.local',
      hostname='hostname',
      ip_address_4='192.168.1.100',
      ip_address_6='::1',
      kernel_version='6.1.0',
      mac_address='00:00:00:00:00:00',
      microphone_usage=list([
        'microphone1',
        'microphone2',
      ]),
      pending_reboot=True,
      platform='platform',
      platform_version='1.0.0',
      power_usage=None,
      run_mode='standalone',
      uptime=1234,
      users=list([
        dict({
          'active': True,
          'host': 'host',
          'name': 'username',
          'pid': 1234,
          'started': 1234,
          'terminal': 'terminal',
        }),
      ]),
      uuid='uuid',
      version='1.0.0',
      version_latest='4.99.0',
      version_latest_url='https://github.com/timmo001/system-bridge/releases/latest',
      version_newer_available=True,
    ),
  )
# ---
# name: test_get_directories
  list([
    MediaDirectory(
      description=None,
      key='documents',
      name='Documents',
      path='/home/user/documents',
    ),
    MediaDirectory(
      description=None,
      key='music',
      name='Music',
      path='/home/user/music',
    ),
  ])
# ---
# name: test_get_file
  MediaFile(
    content_type='text/plain',
    extension='.txt',
    is_directory=False,
    mod_time=100.0,
    name='file1',
    path='/full/path/to/file1',
    permissions='-rw-r--r--',
    size=100,
  )
# ---
# name: test_get_files
  MediaFiles(
    files=list([
    ]),
    path='/home/user/documents',
  )
# ---
# name: test_keyboard_keypress
  Response(
    data=dict({
      'key': 'a',
    }),
    id='test',
    message=None,
    module=None,
    subtype=None,
    type='KEYBOARD_KEY_PRESSED',
  )
# ---
# name: test_keyboard_text
  Response(
    data=dict({
      'text': 'test',
    }),
    id='test',
    message=None,
    module=None,
    subtype=None,
    type='KEYBOARD_TEXT_SENT',
  )
# ---
# name: test_media_control
  Response(
    data=dict({
    }),
    id='test',
    message='Message sent',
    module=None,
    subtype=None,
    type='N/A',
  )
# ---
# name: test_open_path
  Response(
    data=dict({
      'path': '/home/user/documents',
    }),
    id='test',
    message=None,
    module=None,
    subtype=None,
    type='OPENED',
  )
# ---
# name: test_open_url
  Response(
    data=dict({
      'url': 'https://www.google.com',
    }),
    id='test',
    message=None,
    module=None,
    subtype=None,
    type='OPENED',
  )
# ---
# name: test_power_hibernate
  Response(
    data=dict({
    }),
    id='test',
    message=None,
    module=None,
    subtype=None,
    type='POWER_HIBERNATING',
  )
# ---
# name: test_power_lock
  Response(
    data=dict({
    }),
    id='test',
    message=None,
    module=None,
    subtype=None,
    type='POWER_LOCKING',
  )
# ---
# name: test_power_logout
  Response(
    data=dict({
    }),
    id='test',
    message=None,
    module=None,
    subtype=None,
    type='POWER_LOGGINGOUT',
  )
# ---
# name: test_power_restart
  Response(
    data=dict({
    }),
    id='test',
    message=None,
    module=None,
    subtype=None,
    type='POWER_RESTARTING',
  )
# ---
# name: test_power_shutdown
  Response(
    data=dict({
    }),
    id='test',
    message=None,
    module=None,
    subtype=None,
    type='POWER_SHUTTINGDOWN',
  )
# ---
# name: test_power_sleep
  Response(
    data=dict({
    }),
    id='test',
    message=None,
    module=None,
    subtype=None,
    type='POWER_SLEEPING',
  )
# ---
# name: test_register_data_listener
  Response(
    data=dict({
      'modules': list([
        'system',
      ]),
    }),
    id='test',
    message=None,
    module=None,
    subtype=None,
    type='DATA_LISTENER_REGISTERED',
  )
# ---
# name: test_send_notification
  Response(
    data=dict({
      'message': 'test',
      'title': 'Test',
    }),
    id='test',
    message=None,
    module=None,
    subtype=None,
    type='NOTIFICATION_SENT',
  )
# ---
# name: test_send_notification_with_new_fields
  Response(
    data=dict({
      'actionPath': '/home/user/documents',
      'actionUrl': 'https://example.com',
      'duration': 3000,
      'message': 'test',
      'sound': '/home/user/notify.wav',
      'title': 'Test',
    }),
    id='test',
    message=None,
    module=None,
    subtype=None,
    type='NOTIFICATION_SENT',
  )
# ---
# name: test_unknown_message
  Response(
    data=dict({
    }),
    id='test',
    message='Message sent',
    module=None,
    subtype=None,
    type='N/A',
  )
# ---
# name: test_wait_for_response_timeout
  ModulesData(
    battery=None,
    cpu=None,
    disks=None,
    displays=None,
    gpus=None,
    media=None,
    memory=None,
    networks=None,
    processes=None,
    sensors=None,
    system=System(
      boot_time=1234,
      camera_usage=list([
        'camera1',
        'camera2',
      ]),
      device_info=DeviceInfo(
        bios_vendor='bios_vendor',
        bios_version='bios_version',
        board_name='board_name',
        board_vendor='board_vendor',
        chassis_type='chassis_type',
        manufacturer='manufacturer',
        model='model',
        version='version',
      ),
      fqdn='hostname.local',
      hostname='hostname',
      ip_address_4='192.168.1.100',
      ip_address_6='::1',
      kernel_version='6.1.0',
      mac_address='00:00:00:00:00:00',
      microphone_usage=list([
        'microphone1',
        'microphone2',
      ]),
      pending_reboot=True,
      platform='platform',
      platform_version='1.0.0',
      power_usage=None,
      run_mode='standalone',
      uptime=1234,
      users=list([
        dict({
          'active': True,
          'host': 'host',
          'name': 'username',
          'pid': 1234,
          'started': 1234,
          'terminal': 'terminal',
        }),
      ]),
      uuid='uuid',
      version='1.0.0',
      version_latest='4.99.0',
      version_latest_url='https://github.com/timmo001/system-bridge/releases/latest',
      version_newer_available=True,
    ),
  )
# ---
